<resources>
    <string name="app_name">SelfSign</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="self_sign_application_logo">Self Sign Application Logo</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="password">Password</string>
    <string name="forgot_the_password">Forgot the password?</string>
</resources>