<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="30dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/selfsignicon"
        android:layout_marginVertical="50dp"
        android:contentDescription="@string/self_sign_application_logo" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email"
        android:layout_marginVertical="10dp"

        android:background="@drawable/rounded_edittext"
        android:textColor="#9E9E9E"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:text="@string/password"
        android:background="@drawable/rounded_edittext"
        android:textColor="#9E9E9E"
        android:layout_marginVertical="10dp"
        android:padding="20dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/signin"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:textSize="15sp"
        android:background="@drawable/rounded_edittext"
        >

    </Button>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="ForgotPassword"
        android:text="@string/forgot_the_password"
        android:textColor="#246BFD" />

</androidx.appcompat.widget.LinearLayoutCompat>